--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">event-organizer</string>
+    <string name="new_placeoffer_location">Location</string>
+    <string name="new_placeoffer_capacity">Capacity</string>
+    <string name="new_placeoffer_notes">Notes</string>
+    <string name="new_placeoffer_price">Price</string>
+    <string name="add_placeoffer">Add</string>
 </resources>
