--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="new_shoppingitem_description">Description</string>
     <string name="new_shoppingitem_quantity">Quantity</string>
     <string name="new_shoppingitem_price">Price</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
