--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,13 +5,17 @@
     <string name="new_placeoffer_notes">Notes</string>
     <string name="new_placeoffer_price">Price</string>
     <string name="add_placeoffer">Add</string>
+
     <!-- str values for shopping list -->
     <string name="new_shoppingitem_category">Category</string>
     <string name="new_shoppingitem_name">Name</string>
     <string name="new_shoppingitem_description">Description</string>
     <string name="new_shoppingitem_quantity">Quantity</string>
     <string name="new_shoppingitem_price">Price</string>
+    <string name="action_edit">Edit</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_delete">Delete</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!-- str values for menu items -->
+
 </resources>
