Add simple dropdown for shopping item category

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,9 @@
     <string name="edit_shoppingitem">Edit</string>
     <string name="add_shoppingitem">Add</string>
 
-    <!-- str values for menu items -->
+    <string-array name="shoppingitem_categories">
+        <item>Food</item>
+        <item>Drink</item>
+    </string-array>
 
 </resources>
