--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
+    <string name="logout">Logout</string>
+    <string name="register">Register</string>
+
     <string name="app_name">Event organizer</string>
     <string name="new_placeoffer_location">Location</string>
     <string name="new_placeoffer_capacity">Capacity</string>
