add new event activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">event-organizer</string>
-    <string name="my_events">My events</string>
+    <string name="my_events_title">My events</string>
+    <string name="add_new_event_title">Add new event</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -12,6 +13,16 @@
     <string name="nav_invitations">Invitations</string>
     <string name="nav_settings">Settings</string>
 
+
+    <!-- Add new event -->
+    <string name="add_new_event">Add event</string>
+    <string name="new_event_name">Name</string>
+    <string name="new_event_description">Description</string>
+    <string name="new_event_budget">Budget</string>
+    <string name="new_event_start_date">Start date</string>
+    <string name="new_event_end_date">End date</string>
+    <string name="new_event_category">Category</string>
+    <string name="new_event_image">Upload image</string>
     <!-- Toolbar titles when navigation menu item is selected -->
     <string-array name="nav_item_activity_titles">
         <item>My events</item>
