--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="logout">Logout</string>
     <string name="register">Register</string>
     <string name="repeat_password">Repeat password</string>
-    <string name="email">Email</string>
+    <string name="email">Email:</string>
     <string name="first_name">First name</string>
     <string name="last_name">Last name</string>
     <string name="profile_picture">Upload picture</string>
@@ -64,5 +64,10 @@
         <item>Invitations</item>
         <item>Settings</item>
     </string-array>
+    <string name="title_activity_people_overview">PeopleOverviewActivity</string>
+    <string name="section_format">Hello World from section: %1$d</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
